# SDL_Tutorials

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/geometry-rendering/: CMakeLists.txt  geometry-rendering.cpp
src/template/: starter.cpp
src/texture-loading/: CMakeLists.txt  texture-loading.cpp
